--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8083
 spring:
   kafka:
     bootstrapAddress: localhost:9090
@@ -12,10 +12,16 @@ spring:
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
     open-in-view: true
+  liquibase:
+    enabled: true
+    change-log: db/changelog/db.changelog-master.xml
+
 app:
+  security:
+    url: http://localhost:8080
   jwt:
     secret: someSecretKey
